2020-05-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfill.c (grFillRect): Small bug.

2020-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Implement resizable GDI windows.

	* graph/win32/grwin32.c (gr_win32_surface_resize): Implement resizing.
	(Nessage_Process): Add WM_SIZE handling.
	(gr_win32_surface_init): Change window style and streamline.

2020-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Clean up win32 driver.

	This removes `BitBlt' and a related bitmap copy. Instead the driver 
	now uses direct `SetDIBitsToDevice' which is similar to `XPutImage'.

	* graph/win32/grwin32.c (grWin32Surface): Remove `hbn'.
	(gr_win32_surface_refresh_rectangle): Do not call `SetDIBits'.
	(Message_Process): Use `SetDIBitsToDevice' in WM_PAINT and do not
	handle WM_CREATE and simplify WM_DESTROY.
	(gr_win32_surface_init): Remove unnecessary code.
	(gr_win32_surface_listen_event): Minor.

	* graph/grobjs.c (grNewBitmap): Add padding to rgb24 required by GDI.

2020-05-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph]: Implement resizable X11 windows.

	* graph/grevents.h (gr_event_resize): New event defined.
	* graph/x11/grx11.c (gr_x11_surface_init): Configure window.
	(gr_x11_surface_listen_event): Capture resizing events.
	(gr_x11_surface_resize): Implement resizing.

	* src/ftview.c (Process_Event): Redraw on resizing.
	* src/ftgrid.c (Process_Event): Ditto.

2020-05-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grobjs.c (grNewBitmap): Implement bitmap resizing.
	* graph/graph.h (grNewBitmap): Document it.

	* graph/grdevice.c (grNewSurface): Prevent accidental resizing.
	* graph/win32/grwin32.c: Ditto.

2020-05-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_device_init): Remove one nested cycle.

2020-05-01  David Turner  <david@freetype.org>

	Remove obsolete Jamfiles from the tree.

	These are not used anymore.

	* Jamrules, src/Jamfile, graph/Jamfile, graph/*/Jamfile: Delete.
