@@ -1,6 +1,5 @@
 #include "grobjs.h"
 #include "grdevice.h"
-#include <stdlib.h>
 #include <string.h>
 
   grDeviceChain*  gr_device_chain;
